--- a/public/Kanbas/Account/Profile/Edit/screen.html
+++ b/public/Kanbas/Account/Profile/Edit/screen.html
@@ -11,19 +11,19 @@
             <td>
                 <ul>
                     <li>
-                        <a href="/public/Kanbas/Account/Navigation/index.html">Account</a>
+                        <a href="/Kanbas/Account/Navigation/index.html">Account</a>
                     </li>
                     <li>
-                        <a href="/public/Kanbas/Dashboard/screen.html">Dashboard</a>
+                        <a href="/Kanbas/Dashboard/screen.html">Dashboard</a>
                     </li>
                     <li>
-                        <a href="/public/Kanbas/Courses/Home/screen.html">Courses</a>
+                        <a href="/Kanbas/Courses/Home/screen.html">Courses</a>
                     </li>
                     <li>
-                        <a href="/public/Kanbas/Calendar/index.html">Calendar</a>
+                        <a href="/Kanbas/Calendar/index.html">Calendar</a>
                     </li>
                     <li>
-                        <a href="/public/Kanbas/Inbox/index.html">Inbox</a>
+                        <a href="/Kanbas/Inbox/index.html">Inbox</a>
                     </li>
                     <li>
                         <a href="#">History</a>
@@ -45,13 +45,13 @@
                         <a href="">Notifications</a>
                     </li>
                     <li>
-                        <a href="/public/Kanbas/Account/Profile/screen.html">Profile</a>
+                        <a href="/Kanbas/Account/Profile/screen.html">Profile</a>
                     </li>
                     <li>
                         <a href="#">Files</a>
                     </li>
                     <li>
-                        <a href="/public/Kanbas/Courses/Settings/CourseDetails/screen.html">Settings</a>
+                        <a href="/Kanbas/Courses/Settings/CourseDetails/screen.html">Settings</a>
                     </li>
                     <li>
                         <a href="">ePortfolios</a>
@@ -86,9 +86,9 @@
                             value=""/><br/>
                 </form>
                 <h2>Contact</h2>
-                <p>No registered services, you can add some on the <a href="/public/Kanbas/Courses/Settings/CourseDetails/screen.html">settings</a> page.</p>
+                <p>No registered services, you can add some on the <a href="/Kanbas/Courses/Settings/CourseDetails/screen.html">settings</a> page.</p>
                 <h2>Contact</h2>
-                <p>No registered services, you can add some on the <a href="/public/Kanbas/Courses/Settings/CourseDetails/screen.html">settings</a> page.</p>
+                <p>No registered services, you can add some on the <a href="/Kanbas/Courses/Settings/CourseDetails/screen.html">settings</a> page.</p>
                 <h2>Biography</h2>
                 <p>Faculty, Software Engineer, AI, Space, and renewables enthusiast. <br/>
                 <textarea cols="50" rows="3">Faculty, Software Engineer, AI, Space, and renewables enthusiast.
@@ -123,17 +123,17 @@
                     <tr>
                         <td>
                             <button>Cancel</button>
-                            <a href="/public/Kanbas/Account/Profile/screen.html">
+                            <a href="/Kanbas/Account/Profile/screen.html">
                                 <button>Save Profile</button>
                             </a>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <a href="/public/Kanbas/Account/Profile/Edit/screen.html">
+                            <a href="/Kanbas/Account/Profile/Edit/screen.html">
                                 <button>Edit Profile</button>
                               </a>
-                              <a href="/public/Kanbas/Account/Profile/screen.html">
+                              <a href="/Kanbas/Account/Profile/screen.html">
                                 <button>Cancel Editing</button>
                               </a>
                         </td>
