--- a/public/Kanbas/Account/Profile/screen.html
+++ b/public/Kanbas/Account/Profile/screen.html
@@ -11,19 +11,19 @@
             <td>
                 <ul>
                     <li>
-                        <a href="/public/Kanbas/Account/Navigation/index.html">Account</a>
+                        <a href="/Kanbas/Account/Navigation/index.html">Account</a>
                     </li>
                     <li>
-                        <a href="/public/Kanbas/Dashboard/screen.html">Dashboard</a>
+                        <a href="/Kanbas/Dashboard/screen.html">Dashboard</a>
                     </li>
                     <li>
-                        <a href="/public/Kanbas/Courses/Home/screen.html">Courses</a>
+                        <a href="/Kanbas/Courses/Home/screen.html">Courses</a>
                     </li>
                     <li>
-                        <a href="/public/Kanbas/Calendar/index.html">Calendar</a>
+                        <a href="/Kanbas/Calendar/index.html">Calendar</a>
                     </li>
                     <li>
-                        <a href="/public/Kanbas/Inbox/index.html">Inbox</a>
+                        <a href="/Kanbas/Inbox/index.html">Inbox</a>
                     </li>
                     <li>
                         <a href="#">History</a>
@@ -45,13 +45,13 @@
                         <a href="">Notifications</a>
                     </li>
                     <li>
-                        <a href="/public/Kanbas/Account/Profile/screen.html">Profile</a>
+                        <a href="/Kanbas/Account/Profile/screen.html">Profile</a>
                     </li>
                     <li>
                         <a href="#">Files</a>
                     </li>
                     <li>
-                        <a href="/public/Kanbas/Courses/Settings/CourseDetails/screen.html">Settings</a>
+                        <a href="/Kanbas/Courses/Settings/CourseDetails/screen.html">Settings</a>
                     </li>
                     <li>
                         <a href="">ePortfolios</a>
@@ -84,14 +84,14 @@
                         <td>
                             <h2>Jose Annunziato</h2>
                             <h2>Contact</h2>
-                            <p>No registered services, you can add some on the <a href="/public/Kanbas/Courses/Settings/CourseDetails/screen.html">settings</a> page.</p>
+                            <p>No registered services, you can add some on the <a href="/Kanbas/Courses/Settings/CourseDetails/screen.html">settings</a> page.</p>
                             <h2>Biography</h2>
                             <p>Faculty, Software Engineer, AI, Space, and renewables enthusiast.</p>
                             <h2>Links</h2>
                             <a href="https://www.youtube.com/">YouTube</a>
                         </td>
                         <td>
-                            <a href="/public/Kanbas/Account/Profile/Edit/screen.html">
+                            <a href="/Kanbas/Account/Profile/Edit/screen.html">
                                 <button>Edit Profile</button>
                             </a>
                             
