--- a/public/Kanbas/Courses/Assignments/screen.html
+++ b/public/Kanbas/Courses/Assignments/screen.html
@@ -11,19 +11,19 @@
             <td>
                 <ul>
                     <li>
-                        <a href="/public/Kanbas/Account/Navigation/index.html">Account</a>
+                        <a href="/Kanbas/Account/Navigation/index.html">Account</a>
                     </li>
                     <li>
-                        <a href="/public/Kanbas/Dashboard/screen.html">Dashboard</a>
+                        <a href="/Kanbas/Dashboard/screen.html">Dashboard</a>
                     </li>
                     <li>
-                        <a href="/public/Kanbas/Courses/Home/screen.html">Courses</a>
+                        <a href="/Kanbas/Courses/Home/screen.html">Courses</a>
                     </li>
                     <li>
-                        <a href="/public/Kanbas/Calendar/index.html">Calendar</a>
+                        <a href="/Kanbas/Calendar/index.html">Calendar</a>
                     </li>
                     <li>
-                        <a href="/public/Kanbas/Inbox/index.html">Inbox</a>
+                        <a href="/Kanbas/Inbox/index.html">Inbox</a>
                     </li>
                     <li>
                         <a href="#">History</a>
@@ -42,25 +42,25 @@
             <td>
                 <ul>
                     <li>
-                        <a href="/public/Kanbas/Courses/Home/screen.html">Home</a>
+                        <a href="/Kanbas/Courses/Home/screen.html">Home</a>
                     </li>
                     <li>
-                        <a href="/public/Kanbas/Courses/Modules/screen.html">Modules</a>
+                        <a href="/Kanbas/Courses/Modules/screen.html">Modules</a>
                     </li>
                     <li>
-                        <a href="/public/Kanbas/Courses/Piazza/index.html">Piazza</a>
+                        <a href="/Kanbas/Courses/Piazza/index.html">Piazza</a>
                     </li>
                     <li>
                         <a href="">Zoom Meetings</a>
                     </li>
                     <li>
-                        <a href="/public/Kanbas/Courses/Assignments/screen.html">Assignments</a>
+                        <a href="/Kanbas/Courses/Assignments/screen.html">Assignments</a>
                     </li>
                     <li>
                         <a href="">Quizzes</a>
                     </li>
                     <li>
-                        <a href="/public/Kanbas/Courses/Grades/screen.html">Grades</a>
+                        <a href="/Kanbas/Courses/Grades/screen.html">Grades</a>
                     </li>
                     <li>
                         <a href="">People</a>
@@ -93,7 +93,7 @@
                         <a href="">Syllabus</a>
                     </li>
                     <li>
-                        <a href="/public/Kanbas/Courses/Settings/CourseDetails/screen.html">Settings</a>
+                        <a href="/Kanbas/Courses/Settings/CourseDetails/screen.html">Settings</a>
                     </li>
                 </ul>
             </td>
@@ -124,37 +124,37 @@
           <!--Content-->
           <ul>
               <li>
-                      <a href="/public/Kanbas/Courses/Assignments/Edit/screen.html">A1 - ENV+HTML</a>
+                      <a href="/Kanbas/Courses/Assignments/Edit/screen.html">A1 - ENV+HTML</a>
                       <br/>
                       <a href="#">Multiple Modules</a>
                       | Not available yet
               </li>
               <li>
-                      <a href="/public/Kanbas/Courses/Assignments/Edit/screen.html">A2 - CSS+BOOTSTRAP</a>
+                      <a href="/Kanbas/Courses/Assignments/Edit/screen.html">A2 - CSS+BOOTSTRAP</a>
                       <br/>
                       <a href="#">Multiple Modules</a>
                       | Not available yet
               </li>
               <li>
-                      <a href="/public/Kanbas/Courses/Assignments/Edit/screen.html">A3 - JS+REACT</a>
+                      <a href="/Kanbas/Courses/Assignments/Edit/screen.html">A3 - JS+REACT</a>
                       <br/>
                       <a href="#">Multiple Modules</a>
                       | Not available yet
               </li>
               <li>
-                      <a href="/public/Kanbas/Courses/Assignments/Edit/screen.html">A4 - STATE+REDUX</a>
+                      <a href="/Kanbas/Courses/Assignments/Edit/screen.html">A4 - STATE+REDUX</a>
                       <br/>
                       <a href="#">Multiple Modules</a>
                       | Not available yet
               </li>
               <li>
-                      <a href="/public/Kanbas/Courses/Assignments/Edit/screen.html">A5 - NODE+SESSION</a>
+                      <a href="/Kanbas/Courses/Assignments/Edit/screen.html">A5 - NODE+SESSION</a>
                       <br/>
                       <a href="#">Multiple Modules</a>
                       | Not available yet
               </li>
               <li>
-                      <a href="/public/Kanbas/Courses/Assignments/Edit/screen.html">A6 - MONGO+MONGOOSE</a>
+                      <a href="/Kanbas/Courses/Assignments/Edit/screen.html">A6 - MONGO+MONGOOSE</a>
                       <br/>
                       <a href="#">Multiple Modules</a>
                       | Not available yet
