--- a/public/Kanbas/Courses/Settings/Navigation/screen.html
+++ b/public/Kanbas/Courses/Settings/Navigation/screen.html
@@ -11,19 +11,19 @@
             <td>
                 <ul>
                     <li>
-                        <a href="/public/Kanbas/Account/Navigation/index.html">Account</a>
+                        <a href="/Kanbas/Account/Navigation/index.html">Account</a>
                     </li>
                     <li>
-                        <a href="/public/Kanbas/Dashboard/screen.html">Dashboard</a>
+                        <a href="/Kanbas/Dashboard/screen.html">Dashboard</a>
                     </li>
                     <li>
-                        <a href="/public/Kanbas/Courses/Home/screen.html">Courses</a>
+                        <a href="/Kanbas/Courses/Home/screen.html">Courses</a>
                     </li>
                     <li>
-                        <a href="/public/Kanbas/Calendar/index.html">Calendar</a>
+                        <a href="/Kanbas/Calendar/index.html">Calendar</a>
                     </li>
                     <li>
-                        <a href="/public/Kanbas/Inbox/index.html">Inbox</a>
+                        <a href="/Kanbas/Inbox/index.html">Inbox</a>
                     </li>
                     <li>
                         <a href="#">History</a>
@@ -42,25 +42,25 @@
             <td>
                 <ul>
                     <li>
-                        <a href="/public/Kanbas/Courses/Home/screen.html">Home</a>
+                        <a href="/Kanbas/Courses/Home/screen.html">Home</a>
                     </li>
                     <li>
-                        <a href="/public/Kanbas/Courses/Modules/screen.html">Modules</a>
+                        <a href="/Kanbas/Courses/Modules/screen.html">Modules</a>
                     </li>
                     <li>
-                        <a href="/public/Kanbas/Courses/Piazza/index.html">Piazza</a>
+                        <a href="/Kanbas/Courses/Piazza/index.html">Piazza</a>
                     </li>
                     <li>
                         <a href="">Zoom Meetings</a>
                     </li>
                     <li>
-                        <a href="/public/Kanbas/Courses/Assignments/screen.html">Assignments</a>
+                        <a href="/Kanbas/Courses/Assignments/screen.html">Assignments</a>
                     </li>
                     <li>
                         <a href="">Quizzes</a>
                     </li>
                     <li>
-                        <a href="/public/Kanbas/Courses/Grades/screen.html">Grades</a>
+                        <a href="/Kanbas/Courses/Grades/screen.html">Grades</a>
                     </li>
                     <li>
                         <a href="">People</a>
@@ -93,16 +93,16 @@
                         <a href="">Syllabus</a>
                     </li>
                     <li>
-                        <a href="/public/Kanbas/Courses/Settings/CourseDetails/screen.html">Settings</a>
+                        <a href="/Kanbas/Courses/Settings/CourseDetails/screen.html">Settings</a>
                     </li>
                 </ul>
             </td>
             <td>
-                <a href="/public/Kanbas/Courses/Settings/CourseDetails/screen.html">
+                <a href="/Kanbas/Courses/Settings/CourseDetails/screen.html">
                     <button>Course Details</button>
                 </a>
                 <button>Sections</button>
-                <a href="/public/Kanbas/Courses/Settings/Navigation/screen.html">
+                <a href="/Kanbas/Courses/Settings/Navigation/screen.html">
                     <button>Navigation</button>
                 </a>
                 <a href="#">
