changed account url, assignment url and changed a button name.

--- a/public/Kanbas/Courses/Assignments/Edit/screen.html
+++ b/public/Kanbas/Courses/Assignments/Edit/screen.html
@@ -11,7 +11,7 @@
             <td>
                 <ul>
                     <li>
-                        <a href="/Kanbas/Account/Navigation/index.html">Account</a>
+                        <a href="/Kanbas/Account/Profile/screen.html">Account</a>
                     </li>
                     <li>
                         <a href="/Kanbas/Dashboard/screen.html">Dashboard</a>
@@ -191,7 +191,7 @@
                     <button>Cancel</button>
                 </a>
                 <a href="/Kanbas/Courses/Assignments/screen.html">
-                    <button>Cancel</button>
+                    <button>Save</button>
                 </a>
             </td>       
         </tr>
