--- a/public/Kanbas/Courses/Navigation/index.html
+++ b/public/Kanbas/Courses/Navigation/index.html
@@ -1,66 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <ul>
+    <head>
+        <link rel="stylesheet" href="/public/Kanbas/styles.css" />
+        <link rel="stylesheet" href="/public/Kanbas/Courses/Navigation/index.css" />
+    </head>
+    <body>
+        <ul class="wd-navigation">
         <li>
-            <a href="/public/Kanbas/Courses/Home/screen.html">Home</a>
-        </li>
-        <li>
+            <a href="/public/Kanbas/Courses/Home/screen.html">Home</a></li>
+        <li class="wd-active">
             <a href="/public/Kanbas/Courses/Modules/screen.html">Modules</a>
         </li>
-        <li>
-            <a href="/public/Kanbas/Courses/Piazza/index.html">Piazza</a>
-        </li>
-        <li>
-            <a href="">Zoom Meetings</a>
-        </li>
+        <li><a href="http://piazza.com">Piazza</a></li>
+        <li><a href="#">Zoom</a></li>
         <li>
             <a href="/public/Kanbas/Courses/Assignments/screen.html">Assignments</a>
         </li>
-        <li>
-            <a href="">Quizzes</a>
-        </li>
-        <li>
-            <a href="/public/Kanbas/Courses/Grades/screen.html">Grades</a>
-        </li>
-        <li>
-            <a href="">People</a>
-        </li>
-        <li>
-            <a href="">Panopto Video</a>
-        </li>
-        <li>
-            <a href="">Discussions</a>
-        </li>
-        <li>
-            <a href="">Announcements</a>
-        </li>
-        <li>
-            <a href="">Pages</a>
-        </li>
-        <li>
-            <a href="">Files</a>
-        </li>
-        <li>
-            <a href="">Rubrics</a>
-        </li>
-        <li>
-            <a href="">Outcomes</a>
-        </li>
-        <li>
-            <a href="">Collaborations</a>
-        </li>
-        <li>
-            <a href="">Syllabus</a>
-        </li>
-        <li>
-            <a href="">Settings</a>
-        </li>
-    </ul>
-</body>
+        <li><a href="#">Quizzes</a></li>
+        <li><a href="/public/Kanbas/Courses/Grades/screen.html">Grades</a></li>
+        <li><a href="#">People</a></li>
+        </ul>
+    </body>
 </html>
