--- a/public/Kanbas/Navigation/index.html
+++ b/public/Kanbas/Navigation/index.html
@@ -3,36 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/public/Kanbas/Navigation/index.css"/>
+    <link rel="stylesheet" href="/public/Kanbas/styles.css"/>
+    <link rel="stylesheet" href="/public/libs/font-awesome/css/font-awesome.min.css"/>
     <title>main navigation</title>
 </head>
 <body>
-    <ul>
+    <ul class="wd-kanbas-navigation">
         <li>
-            <a href="/public/Kanbas/Account/Navigation/index.html">Account</a>
+            <a href="/public/Kanbas/Account/Navigation/index.html">
+                <i class="fa fa-user-circle" style="color:white"></i>
+                Account</a>
         </li>
         <li>
-            <a href="/public/Kanbas/Dashboard/screen.html">Dashboard</a>
+            <a href="/public/Kanbas/Dashboard/screen.html"><i class="fa fa-tachometer"></i> Dashboard</a>
+        </li>
+        <li class="wd-active">
+            <a href="/public/Kanbas/Courses/Home/screen.html">
+                <i class="fa fa-light fa-book"></i>
+                Courses</a>
         </li>
         <li>
-            <a href="/public/Kanbas/Courses/Home/screen.html">Courses</a>
+            <a href="/public/Kanbas/Calendar/index.html">
+                <i class="fa fa-calendar"></i>Calendar</a>
         </li>
         <li>
-            <a href="/public/Kanbas/Calendar/index.html">Calendar</a>
+            <a href="/public/Kanbas/Inbox/index.html"><i class="fa fa-inbox"></i></br>
+                Inbox</a>
         </li>
         <li>
-            <a href="/public/Kanbas/Inbox/index.html">Inbox</a>
+            <a href="#"><i class="fa fa-clock-o"></i>History</a>
         </li>
         <li>
-            <a href="#">History</a>
+            <a href="#">
+                <i class="fa fa-tv"></i>Studio</a>
         </li>
         <li>
-            <a href="#">Studio</a>
+            <a href="#">
+                <i class="fa fa-share-square-o"></i>
+                Commons</a>
         </li>
         <li>
-            <a href="#">Commons</a>
-        </li>
-        <li>
-            <a href="#">Help</a>
+            <a href="#">
+                <i class="fa fa-question-circle"></i> </br>
+                Help</a>
         </li>
     </ul>
 </body>
