removed /public for bootstraps and fontawesome in lab2

--- a/public/labs/a2/index.html
+++ b/public/labs/a2/index.html
@@ -16,9 +16,9 @@
         </style-->
         <link href="index.css"
               rel="stylesheet"/>
-        <link href="/public/libs/font-awesome/css/font-awesome.min.css" 
+        <link href="/libs/font-awesome/css/font-awesome.min.css" 
         rel="stylesheet"/>
-        <link href="/public/libs/font-awesome/css/font-awesome.css" 
+        <link href="/libs/font-awesome/css/font-awesome.css" 
         rel="stylesheet"/>
      </head>
 
@@ -290,7 +290,7 @@ rule referring to the P tags
 </div>
 
 
-<link href="/public/libs/bootstrap.min.css" rel="stylesheet"/>
+<link href="/libs/bootstrap.min.css" rel="stylesheet"/>
     <div class="container">
        <h1>Bootstrap</h1>
        <p>Welcome to Bootstrap!</p>
@@ -653,7 +653,7 @@ rule referring to the P tags
   </a>
 </h2>
 <div class="card" style="width: 18rem;">
-  <img src="/public/labs/a1/teslabot.jpg"
+  <img src="/labs/a1/teslabot.jpg"
        class="card-img-top" alt="...">
   <div class="card-body">
       <h5 class="card-title">Card title</h5>
