--- a/public/labs/a2/index.html
+++ b/public/labs/a2/index.html
@@ -290,7 +290,7 @@ rule referring to the P tags
 </div>
 
 
-<link href="/libs/bootstrap.min.css" rel="stylesheet"/>
+<link href="/bootstrap.min.css" rel="stylesheet"/>
     <div class="container">
        <h1>Bootstrap</h1>
        <p>Welcome to Bootstrap!</p>
